compiler/src/test/resources/amyc/execution/failing/MatchError3.grading.amy
object MatchError
  abstract class Foo
  case class Bar() : Foo
  case class Baz(f: Foo) : Foo

  Baz(Bar()) match { case Baz(Baz(_)) => () }
end MatchError
